# little-2d-shooter

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md  build  build.sh
src/: constants.hpp  main.cpp
src/client/: client.cpp  client.hpp
src/core/: game.cpp  game.hpp  map.cpp  map.hpp
src/entities/: bullet.cpp  bullet.hpp  obstacle.cpp  obstacle.hpp  player.cpp  player.hpp  position.hpp
src/game/: game.cpp  game.hpp
src/game/character/: character.hpp  player.cpp  player.hpp
src/gameplay/: game.cpp
src/gameplay/character/: player.cpp
src/multiplayer/client/: client.cpp
src/multiplayer/server/: server.cpp
src/network/: network_manager.cpp  network_manager.hpp
src/network/server/: server.hpp
src/server/: server.cpp  server.hpp
